[package]
name = "hyper-proxy"
version = "0.10.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
description = "A proxy connector for Hyper-based applications"

documentation = "https://docs.rs/hyper-proxy"
repository = "https://github.com/tafia/hyper-proxy"

readme = "README.md"
keywords = ["hyper", "proxy", "tokio", "ssl"]
categories = ["web-programming::http-client", "asynchronous", "authentication"]
license = "MIT"
edition = "2018"

[dependencies]
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio"] }
tokio = { version = "1", features = ["io-std", "io-util"] }
tower-service = "0.3"
http = "1"
futures-util = { version = "0.3", default-features = false }
base64 = "0.21"
bytes = "1.0"
hyper-tls = { version = "0.6", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-rustls = { version = "0.25", optional = true, features = ["ring"] }

webpki = { package = "rustls-webpki", version = "0.102", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }

[features]
default = ["native-tls"]
native-tls = ["dep:tokio-native-tls", "dep:hyper-tls", "dep:native-tls"]
# note that `__rustls-base` is not a valid feature on its own - it will configure rustls without root
# certificates!
__rustls-base = ["dep:tokio-rustls", "dep:webpki"]
rustls-native-roots = ["__rustls-base", "dep:rustls-native-certs"]
rustls-webpki-roots = ["__rustls-base", "dep:webpki-roots"]
